--- a/src/index.html
+++ b/src/index.html
@@ -2,67 +2,56 @@
 layout: default
 ---
 
-<header class="relative w-full h-96 bg-green-900 overflow-hidden">
+<header class="relative w-full overflow-hidden bg-green-900 h-96">
   <div x-data class="absolute z-0 w-full h-full" aria-hidden="true">
-    <video
-      playsinline
-      autoplay
-      muted
-      loop
-      class="object-cover w-screen h-screen"
-    >
+    <video playsinline autoplay muted loop class="object-cover w-screen h-screen">
       <source src="/stars.mp4" type="video/mp4" />
     </video>
   </div>
 
-  <div
-    class="
-      absolute
-      flex flex-col
-      justify-center
-      items-center
-      z-10
-      w-full
-      h-full
-      bg-green-900 bg-opacity-70
-    "
-  >
-    <img
-      src="/logo.svg"
-      class="h-32 w-32"
-      alt="Orange circular logo with a large white capital letter 'I' composed of a geometric network of lines and orbs"
-    />
-    <h1 class="text-5xl text-white text-center font-heading">Innovate Trent</h1>
+  <div class="absolute z-10 flex flex-col items-center justify-center w-full h-full bg-green-900 bg-opacity-70">
+    <img src="/logo.svg" class="w-32 h-32"
+      alt="Orange circular logo with a large white capital letter 'I' composed of a geometric network of lines and orbs" />
+    <h1 class="px-3 text-5xl text-center text-white font-heading">Innovate Trent</h1>
   </div>
 </header>
 
-<main class="min-h-screen bg-gray-700">
-  <section
-    class="min-h-96 py-4 bg-yellow-700 flex flex-col justify-center items-center"
-  >
-    <p class="text-2xl py-6 max-w-screen-md text-white">{{ metadata.impressum }}</p>
+<main class="min-h-screen overflow-x-hidden bg-gray-700">
+  <section class="flex flex-col items-center justify-center py-4 bg-yellow-700 min-h-96">
+    <p class="max-w-screen-md px-3 py-6 text-xl text-white md:text-2xl">{{ metadata.impressum }}</p>
 
-    <p class="text-2xl py-6 max-w-screen-md text-white">{{ metadata.twitch_intro }}</p>
+    <p class="max-w-screen-md px-3 py-6 text-xl text-white md:text-2xl">{{ metadata.twitch_intro }}</p>
 
-    <p class="text-2xl py-6 max-w-screen-md text-white">{{ metadata.discord_intro }}</p>
+    <p class="max-w-screen-md px-3 py-6 text-xl text-white md:text-2xl">{{ metadata.discord_intro }}</p>
 
-    <a
-      href="https://discord.gg/JXb5tVGAeX"
-      target="_blank"
-      rel="noopener noreferrer nofollow" class="px-4 py-2 bg-green-700 border-2 rounded-lg border-green-900 flex text-white hover:shadow-xl text-2xl justify-center items-center gap-4 hover:bg-green-900 focus:outline-none focus:ring-2 focus:ring-green-400 transition duration-200 ease-out">
-      <ion-icon name="logo-discord"></ion-icon>
+    <a href="{{ links.discord }}" target="_blank" rel="noopener noreferrer nofollow"
+      class="flex items-center justify-center gap-4 px-4 py-2 text-2xl text-white transition duration-200 ease-out bg-green-700 border-2 border-green-900 rounded-lg hover:shadow-xl hover:bg-green-900 focus:outline-none focus:ring-2 focus:ring-green-400">
+      <ion-icon name="logo-discord" aria-hidden="true"></ion-icon>
       Join our Discord!
     </a>
+
+    <iframe src="https://discord.com/widget?id=553342475646009365&theme=dark" class="py-8" width="350" height="500"
+      allowtransparency="true" frameborder="0"
+      sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+
   </section>
 
-  <section
-    class="min-h-screen bg-green-900 flex flex-col justify-center items-center"
-  >
+  <section class="flex flex-col items-center justify-center min-h-screen bg-green-900">
 
-  <h2 class="text-center text-4xl text-white py-6">
-  Now Playing:
-  </h2>
-    <div id="twitch-embed"></div>
+    <h2 class="px-3 py-6 text-5xl text-white font-heading">
+      Now Playing:
+    </h2>
+
+    <div class="flex items-center justify-center w-full max-w-screen-lg">
+      <div id="twitch-embed" class="flex-grow"></div>
+    </div>
+
+    <style>
+      #twitch-embed>iframe {
+        aspect-ratio: 16/9;
+      }
+    </style>
+    </div>
 
     <!-- Load the Twitch embed JavaScript file -->
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
@@ -70,8 +59,8 @@ layout: default
     <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
     <script type="text/javascript">
       new Twitch.Embed("twitch-embed", {
-        width: 854,
-        height: 480,
+        width: '100%',
+        height: '100%',
         autoplay: false,
         layout: "video",
         channel: "rtgame",
@@ -79,39 +68,111 @@ layout: default
     </script>
   </section>
 
-  <section
-    class="min-h-screen bg-yellow-700 flex flex-col justify-center items-center"
-  >
-    <p class="text-2xl text-white">News and Announcements!</p>
+  <section class="flex flex-col items-center justify-center min-h-screen bg-yellow-700">
+
+    <article>
+      <div class="flex items-center justify-center w-full">
+        <h2 class="px-3 text-5xl text-center text-white font-heading">Latest News:</h2>
+
+      </div>
+      <div class="flex justify-center">
+        <hr class="flex-grow w-full max-w-screen-md my-4" />
+      </div>
+
+      <article class="py-4 text-black shadow-2xl bg-lightorange min-h-96">
+        <h3 class="px-3 text-3xl italic text-center font-heading"><time>{{ news.date }}</time></h3>
+
+        <p class="max-w-screen-md px-6 py-4 text-lg">
+          {{ news.content }}
+        </p>
+      </article>
+    </article>
+
+
   </section>
 
-  <section
-    class="min-h-screen bg-green-900 flex flex-col justify-center items-center"
-  >
-    <p class="text-2xl text-white">Meet the Admin Team</p>
+  <section class="flex flex-col items-center justify-center min-h-screen bg-green-900 shadow-xl">
+    <h2 class="px-3 text-5xl text-center text-white font-heading">Meet the Admin Team</h2>
+
+    <div class="w-full max-w-screen-lg my-12 swiper h-96">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide bg-lightorange">
+          <div class="flex items-center justify-center w-full h-full">
+            <img class="object-scale-down" src="https://picsum.photos/200/300" alt="">
+          </div>
+        </div>
+        <div class="swiper-slide bg-lightgreen">
+          <div class="flex items-center justify-center w-full h-full">
+            <img class="object-scale-down" src="https://picsum.photos/200/300" alt="">
+          </div>
+        </div>
+        <div class="swiper-slide bg-lightorange">
+          <div class="flex items-center justify-center w-full h-full">
+            <img class="object-scale-down" src="https://picsum.photos/200/300" alt="">
+          </div>
+        </div>
+        <div class="swiper-slide bg-lightorange">
+          <div class="flex items-center justify-center w-full h-full">
+            <img class="object-scale-down" src="https://picsum.photos/200/300" alt="">
+          </div>
+        </div>
+        <div class="swiper-slide bg-lightorange">
+          <div class="flex items-center justify-center w-full h-full">
+            <img class="object-scale-down" src="https://picsum.photos/200/300" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+    </div>
+
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <script>
+      const swiper = new Swiper('.swiper', {
+        direction: 'horizontal',
+        loop: true,
+        autoplay: true,
+
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
+    </script>
+
   </section>
 
-  <section
-    class="min-h-screen bg-yellow-700 flex flex-col justify-center items-center"
-  >
-    <p class="text-2xl text-white">We're on Instagram too!</p>
+  <section class="flex flex-col items-center justify-center min-h-screen bg-yellow-700 gap-y-6">
+    <h2 class="px-3 text-5xl text-center text-white font-heading">We're on Instagram!</h2>
 
-    <a href="" target="_blank" rel="noopener nofollow noreferrer">Follow Us</a>
+    <p class="p-4 text-2xl text-center text-white md:text-3xl">
+      {{ content.instagram.impressum }}
+    <p>
+
+      <a href="{{ links.instagram }}" target="_blank" rel="noopener noreferrer nofollow"
+        class="flex items-center justify-center gap-4 px-4 py-2 text-2xl text-center text-white transition duration-200 ease-out bg-green-700 border-2 border-green-900 rounded-lg hover:shadow-xl hover:bg-green-900 focus:outline-none focus:ring-2 focus:ring-green-400">
+        <ion-icon name="logo-instagram" aria-hidden="true" class="transition duration-200 ease-out group-hover:text-lightorange"></ion-icon>
+        Follow Us on Instagram
+      </a>
   </section>
 
-  <section
-    class="min-h-screen bg-green-900 flex flex-col justify-center items-center"
-  >
+  <!-- <section class="flex flex-col items-center justify-center min-h-screen bg-green-900">
     <p class="text-2xl text-white">Club Photos</p>
-  </section>
+  </section> -->
 
+
+  <!--
   <section
-    class="min-h-screen bg-yellow-700 flex flex-col justify-center items-center"
+    class="flex flex-col items-center justify-center min-h-screen bg-yellow-700"
   >
     <p class="text-2xl text-white">YouTube</p>
 
     <p>
       (Just imagine a playlist is embedded here with stream VODs or something)
     </p>
-  </section>
+  </section> -->
+
+
 </main>
