attempt opengraph image fix

--- a/src/404.html
+++ b/src/404.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 permalink: 404.html
+image: /opengraph.png
+ogtype: website
 ---
 
 <header class="relative w-full overflow-hidden bg-green-900 h-96">
